--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
@@ -11,6 +11,7 @@
       - Barra de busca e filtros (categoria, preço, avaliação)
       - Grid de cards de anúncios
       - Modal de detalhes com ação de "Simular compra"
+      - Login com Facebook via OAuth
     Observação: a lógica básica está em marketplace.js
   -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,121 +29,258 @@
       --stroke: #1f2937;       /* bordas sutis */
       --warning: #f59e0b;      /* laranja */
     }
-
     * { box-sizing: border-box; }
     html, body { height: 100%; }
     body {
       margin: 0;
       background: radial-gradient(1200px 1200px at 90% -10%, rgba(34,197,94,.25), transparent 40%),
-                  radial-gradient(900px 900px at 10% -10%, rgba(14,165,233,.25), transparent 35%),
                   var(--bg);
       color: var(--text);
-      font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, 'Apple Color Emoji','Segoe UI Emoji';
+      font-family: 'Inter', system-ui, sans-serif;
+      font-size: 0.9375rem;
+      line-height: 1.6;
     }
-
+    .wrap { max-width: 1200px; margin: 0 auto; padding: 0 1rem; }
     header {
-      position: sticky; top: 0; z-index: 10;
-      backdrop-filter: blur(10px);
-      background: rgba(2,6,23,.6);
+      position: sticky; top: 0; z-index: 99;
+      background: var(--panel);
       border-bottom: 1px solid var(--stroke);
+      padding: 0.75rem 0;
     }
-    .wrap { max-width: 1200px; margin: 0 auto; padding: 16px; }
-    .row { display: flex; gap: 12px; align-items: center; }
-
-    .logo { font-weight: 800; letter-spacing: .5px; }
-    .logo span { color: var(--brand); }
-
-    .searchbar { flex: 1; display: flex; gap: 8px; }
-    .searchbar input, .searchbar select {
-      background: #0b1220;
-      color: var(--text);
+    header .wrap {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 1rem;
+    }
+    .logo { font-size: 1.25rem; font-weight: 700; color: var(--brand); text-decoration: none; }
+    .search-box {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      background: var(--card);
       border: 1px solid var(--stroke);
-      border-radius: 10px;
-      padding: 10px 12px;
+      border-radius: 0.5rem;
+      padding: 0.5rem 0.75rem;
+      flex: 1;
+      max-width: 500px;
+    }
+    .search-box input {
+      flex: 1;
+      background: transparent;
+      border: 0;
+      color: var(--text);
       outline: none;
     }
-    .searchbar input { flex: 1; }
-
-    .btn {
-      background: linear-gradient(180deg, var(--brand), var(--brand-2));
-      border: none; color: white; font-weight: 700; cursor: pointer;
-      padding: 10px 14px; border-radius: 10px;
-      transition: transform .08s ease, filter .2s ease;
+    .search-box input::placeholder { color: var(--muted); }
+    
+    /* Estilo para botão de login com Facebook */
+    .auth-section {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
     }
-    .btn:hover { filter: brightness(1.05); }
-    .btn:active { transform: translateY(1px); }
-
-    main .filters { padding: 16px 0; }
-    .filters .chips { display: flex; gap: 8px; flex-wrap: wrap; }
-    .chip {
-      border: 1px solid var(--stroke); color: var(--muted);
-      padding: 8px 10px; border-radius: 20px; background: rgba(2,6,23,.6);
-      cursor: pointer; user-select: none; transition: border-color .2s ease, color .2s ease;
+    #loginFacebook {
+      background: #1877f2;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 0.5rem;
+      font-weight: 600;
+      cursor: pointer;
+      font-size: 0.875rem;
+      transition: background 0.2s;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
     }
-    .chip.active { border-color: var(--brand); color: var(--text); }
-
-    .grid {
-      display: grid; grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-      gap: 16px; padding-bottom: 40px;
+    #loginFacebook:hover {
+      background: #166fe5;
     }
-
-    .card {
-      background: linear-gradient(180deg, rgba(34,197,94,.1), transparent 25%), var(--card);
+    #userInfo {
+      display: none;
+      align-items: center;
+      gap: 0.5rem;
+    }
+    #userInfo.show {
+      display: flex;
+    }
+    #userName {
+      font-size: 0.875rem;
+      color: var(--text);
+    }
+    #logoutButton {
+      background: var(--card);
+      color: var(--text);
       border: 1px solid var(--stroke);
-      border-radius: 16px; overflow: hidden; position: relative;
-      box-shadow: 0 6px 20px rgba(0,0,0,.25);
-      transition: transform .15s ease, box-shadow .2s ease, border-color .2s ease;
+      padding: 0.375rem 0.75rem;
+      border-radius: 0.375rem;
+      cursor: pointer;
+      font-size: 0.8125rem;
     }
-    .card:hover { transform: translateY(-3px); border-color: rgba(34,197,94,.45); box-shadow: 0 10px 28px rgba(0,0,0,.35); }
-    .thumb { aspect-ratio: 16/9; background: #0a0f1a; display: grid; place-items: center; font-size: 42px; }
+    #logoutButton:hover {
+      background: var(--stroke);
+    }
 
-    .body { padding: 12px; display: grid; gap: 10px; }
-    .title { font-weight: 700; }
-    .meta { display: flex; justify-content: space-between; color: var(--muted); font-size: 12px; }
-    .price { font-weight: 800; color: #c7f9cc; }
-    .rating { color: #fde047; }
-
-    footer { border-top: 1px solid var(--stroke); padding: 20px 0; color: var(--muted); text-align: center; }
-
-    /* Modal */
-    dialog::backdrop { background: rgba(0,0,0,.65); backdrop-filter: blur(2px); }
+    .filters {
+      background: var(--panel);
+      padding: 1rem 0;
+      border-bottom: 1px solid var(--stroke);
+    }
+    .chips {
+      display: flex;
+      gap: 0.5rem;
+      flex-wrap: wrap;
+    }
+    .chip {
+      background: var(--card);
+      border: 1px solid var(--stroke);
+      border-radius: 0.375rem;
+      padding: 0.375rem 0.75rem;
+      font-size: 0.8125rem;
+      cursor: pointer;
+      transition: background 0.15s;
+    }
+    .chip:hover { background: var(--stroke); }
+    .chip.active {
+      background: var(--brand);
+      border-color: var(--brand);
+      color: #000;
+      font-weight: 600;
+    }
+    .grid {
+      padding: 2rem 0;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+      gap: 1rem;
+    }
+    .card {
+      background: var(--card);
+      border: 1px solid var(--stroke);
+      border-radius: 0.5rem;
+      padding: 1rem;
+      cursor: pointer;
+      transition: transform 0.2s, border-color 0.2s;
+    }
+    .card:hover {
+      border-color: var(--brand);
+      transform: translateY(-2px);
+    }
+    .thumb {
+      font-size: 3rem;
+      text-align: center;
+      margin-bottom: 0.5rem;
+    }
+    .card h3 {
+      margin: 0 0 0.5rem 0;
+      font-size: 1rem;
+      font-weight: 600;
+    }
+    .seller {
+      font-size: 0.75rem;
+      color: var(--muted);
+      margin-bottom: 0.5rem;
+    }
+    .desc {
+      font-size: 0.8125rem;
+      color: var(--muted);
+      margin-bottom: 0.75rem;
+    }
+    .meta {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .price {
+      font-size: 1.125rem;
+      font-weight: 700;
+      color: var(--brand);
+    }
+    .rating {
+      font-size: 0.8125rem;
+      color: var(--warning);
+    }
+    footer {
+      background: var(--panel);
+      border-top: 1px solid var(--stroke);
+      padding: 2rem 0;
+      text-align: center;
+      color: var(--muted);
+      font-size: 0.8125rem;
+    }
     dialog {
-      border: 1px solid var(--stroke); border-radius: 16px; padding: 0; color: var(--text);
-      background: var(--panel); width: min(640px, 95vw);
-      box-shadow: 0 20px 60px rgba(0,0,0,.55);
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 90%;
+      max-width: 500px;
+      background: var(--panel);
+      border: 1px solid var(--stroke);
+      border-radius: 0.5rem;
+      padding: 1.5rem;
+      color: var(--text);
     }
-    .modal-head { padding: 16px; border-bottom: 1px solid var(--stroke); display: flex; justify-content: space-between; align-items: center; }
-    .modal-body { padding: 16px; display: grid; gap: 12px; }
-    .modal-actions { padding: 16px; border-top: 1px solid var(--stroke); display: flex; gap: 10px; justify-content: flex-end; }
-    .link { color: #93c5fd; text-decoration: none; }
-    .muted { color: var(--muted); }
+    dialog::backdrop {
+      background: rgba(0, 0, 0, 0.7);
+    }
+    .modal-head {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 1rem;
+    }
+    .modal-body .thumb {
+      font-size: 4rem;
+    }
+    .modal-body .muted {
+      color: var(--muted);
+      font-size: 0.8125rem;
+      margin-bottom: 0.5rem;
+    }
+    .modal-body .meta {
+      margin: 1rem 0;
+    }
+    .modal-actions {
+      display: flex;
+      gap: 0.5rem;
+      margin-top: 1rem;
+    }
+    .btn {
+      flex: 1;
+      background: var(--brand);
+      border: 0;
+      border-radius: 0.375rem;
+      padding: 0.625rem 1rem;
+      color: #000;
+      font-weight: 600;
+      cursor: pointer;
+      font-size: 0.875rem;
+    }
+    .btn:hover { background: var(--brand-2); }
   </style>
 </head>
 <body>
-  <!-- Cabeçalho com busca e filtros rápidos -->
   <header>
-    <div class="wrap row">
-      <div class="logo">Loja<span>Marketplace</span></div>
-      <form id="searchForm" class="searchbar" onsubmit="return false">
-        <input id="q" type="search" placeholder="Buscar assinatura (Netflix, HBO, Prime...)" />
-        <select id="categoria">
-          <option value="">Todas categorias</option>
-          <option>Streaming</option>
-          <option>Esportes</option>
-          <option>Música</option>
-          <option>Educação</option>
-        </select>
-        <select id="ordem">
-          <option value="relevancia">Relevância</option>
-          <option value="menor-preco">Menor preço</option>
-          <option value="maior-preco">Maior preço</option>
-          <option value="melhor-avaliacao">Melhor avaliação</option>
-        </select>
-        <button class="btn" id="btnBuscar" aria-label="Buscar">Buscar</button>
-      </form>
+    <div class="wrap">
+      <a href="#" class="logo">🛒 Loja Marketplace</a>
+      <div class="search-box">
+        <span>🔍</span>
+        <input type="text" id="searchInput" placeholder="Buscar assinaturas..." />
+      </div>
+      <!-- Seção de autenticação com Facebook -->
+      <div class="auth-section">
+        <button id="loginFacebook">
+          <span>📘</span>
+          Entrar com o Facebook
+        </button>
+        <div id="userInfo">
+          <span id="userName"></span>
+          <button id="logoutButton">Sair</button>
+        </div>
+      </div>
     </div>
   </header>
-
   <main class="wrap">
     <!-- Chips de filtros adicionais (simples) -->
     <section class="filters">
@@ -153,17 +291,14 @@
         <div class="chip" data-chip="garantia">Garantia</div>
       </div>
     </section>
-
     <!-- Grid de anúncios -->
     <section id="grid" class="grid" aria-live="polite">
       <!-- Cards inseridos dinamicamente por marketplace.js -->
     </section>
   </main>
-
   <footer>
     <div class="wrap">Projeto de exemplo para marketplace de assinaturas. Código com comentários explicativos.</div>
   </footer>
-
   <!-- Modal de detalhes do anúncio -->
   <dialog id="detalhesModal">
     <div class="modal-head">
@@ -185,7 +320,6 @@
       <button class="btn" id="btnSimularCompra">Simular compra</button>
     </div>
   </dialog>
-
   <!-- Scripts -->
   <script src="marketplace.js"></script>
 </body>
